src/Scenes/Lobby/Style/GameOptionsEditor.css
@media (min-width: 768px) {
    .game-options-editor {
        margin-right: 1em;
    }
}

.game-options-group {
    width: fit-content;
    border: 2px solid #2d1000ff;
    border-radius: 1em;
    background-color: #ffffff38;
    padding: 1em;
    margin: 0.5em auto;
}

.game-options-group hr {
    margin: 0.25em 0;
    border: 1px solid #2d1000ff;
}

.game-options-group .collapsible-header hr {
    display: inline-block;
    width: calc(100% - 2em);
}

.game-options-group .collapsible-visible {
    max-height: 28em;
}

.game-options-group label {
    margin: 0 0.3em;
}

.option-row {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.option-left-column {
    margin-right: 1em;
}

.option-left-column label {
    margin-left: 0;
}

.option-right-column {
    margin-left: auto;
    width: 10em;
    display: flex;
    align-items: center;
}

@media (max-width: 768px) {
    .game-options-group {
        font-size: 11pt;
    }

    .option-right-column {
        width: 7.5em;
    }
}

.option-right-column input {
    min-width: 0;
    border-radius: 0.2em;
    margin: 0.1em;
}

.option-right-column input[type="range"] {
    flex: 3 1 0;
}

.option-right-column input[type="number"] {
    padding: 0.1em;
    flex: 2 1 0;
}

